"Stepped" F-curve modifier does not work as expected when stacked after other modifiers #39291

Closed
opened 2014-03-20 19:07:06 +01:00 by Sam Brubaker · 9 comments

Version: 2.70 official (win 64)

How to reproduce: Open the provided file, or create any F-Curve that uses the "Stepped" modifier as the 2nd or lower modifier in part of a stack.

FCurveModiferFail.blend

Expected behavoir: The F-Curve shown should resemble a sine wave, but flat over every interval of 4 frames. Instead, it looks as though the sine wave function was being carried out afterthe stepped modifier.

The "Stepped" modifier, being last in the stack as shown, does not appear to read the result of the first sine wave modifier. The problem is the same for noise and generator modifiers as well. This makes it problematic if an animator wants to "step" any kind of noise or function in the f-curve.

Here is a screenshot:
FCurveModiferFail.blend.png

Version: 2.70 official (win 64) How to reproduce: Open the provided file, or create any F-Curve that uses the "Stepped" modifier as the 2nd or lower modifier in part of a stack. [FCurveModiferFail.blend](https://archive.blender.org/developer/F81953/FCurveModiferFail.blend) Expected behavoir: The F-Curve shown should resemble a sine wave, but flat over every interval of 4 frames. Instead, it looks as though the sine wave function was being carried out *after*the stepped modifier. The "Stepped" modifier, being last in the stack as shown, does not appear to read the result of the first sine wave modifier. The problem is the same for noise and generator modifiers as well. This makes it problematic if an animator wants to "step" any kind of noise or function in the f-curve. Here is a screenshot: ![FCurveModiferFail.blend.png](https://archive.blender.org/developer/F81955/FCurveModiferFail.blend.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Joshua Leung was assigned by Bastien Montagne 2014-03-20 20:09:53 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Assigning to Joshua since he knows better, but I think this is known limitation of current F-Modifiers system - iirc they take value from org curve, not previous modifier…

Assigning to Joshua since he knows better, but I think this is known limitation of current F-Modifiers system - iirc they take value from org curve, not previous modifier…
Author

Thanks, @mont29!

Certain modifiers do work in a stack; the envelope modifier for instance will deform a sine wave function, but a sine wave function can also come after the envelope.

It occurs to me that many modifiers are only additive or multiplicative so stack order is easy to overlook. Also, there's still no buttons for changing the stack order in f-curve modifiers as there are in the mesh modifiers. Perhaps that ought to be fixed as well!

Thanks, @mont29! Certain modifiers do work in a stack; the envelope modifier for instance will deform a sine wave function, but a sine wave function can also come after the envelope. It occurs to me that many modifiers are only additive or multiplicative so stack order is easy to overlook. Also, there's still no buttons for changing the stack order in f-curve modifiers as there are in the mesh modifiers. Perhaps that ought to be fixed as well!

This issue was referenced by blender/blender-addons-contrib@b37dc6a8bd

This issue was referenced by blender/blender-addons-contrib@b37dc6a8bd4137ad185a594106b66479add2c1d5

This issue was referenced by b37dc6a8bd

This issue was referenced by b37dc6a8bd4137ad185a594106b66479add2c1d5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit b37dc6a8bd.

Closed by commit b37dc6a8bd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39291
No description provided.